Revise configuration of JavaExec tasks